<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="date_and_time">Date &amp; time settings</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="system_update_settings_list_item_title">Software update</string>
    <string name="firmware_version">Android version</string>
    <string name="model_number">Model number</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="language_keyboard_settings_title">Language and input</string>
    <string name="keyboard_settings_category">Keyboards and input methods</string>
    <string name="phone_language">Language</string>
    <string name="auto_replace">Auto-replace</string>
    <string name="auto_replace_summary">Correct mistyped words</string>
    <string name="auto_caps">Auto-capitalization</string>
    <string name="auto_caps_summary">Capitalize first letter in sentences</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary">Press Space key twice to insert \".\"</string>
    <string name="pointer_settings_category">Mouse/trackpad</string>
    <string name="pointer_speed">Pointer speed</string>
    <string name="current_input_method">Default</string>
    <string name="builtin_keyboard_settings_title">Physical keyboard</string>
    <string name="development_settings_title">Developer options</string>
    <string name="enable_adb">USB debugging</string>
    <string name="enable_adb_summary">Debug mode when USB is connected</string>
    <string name="verifier_device_identifier">Development device ID</string>
    <string name="verifier_device_identifier_not_available">Device information not available</string>
    <string name="keep_screen_on">Stay awake</string>
    <string name="keep_screen_on_summary">Screen will never sleep while charging</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="accessibility_settings_title">Accessibility settings</string>
    <string name="accessibility_services_title">Services</string>
    <string name="accessibility_system_title">System</string>
    <string name="accessibility_toggle_large_text_title">Large text</string>
    <string name="accessibility_power_button_ends_call_title">Power button ends call</string>
    <string name="accessibility_touch_exploration_title">Explore by touch</string>
    <string name="accessibility_touch_exploration_summary">"When Explore by Touch is turned on, you can hear or see descriptions of what's under your finger.

 This feature is for low-vision users."</string>
    <string name="accessibility_long_press_timeout_title">Tap and hold delay</string>
    <string name="accessibility_script_injection_title">Install web scripts</string>
    <string name="accessibility_menu_item_tutorial">Tutorial</string>
    <string name="accessibility_script_injection_button_allow">Allow</string>
    <string name="accessibility_script_injection_button_disallow">"Don't allow"</string>
    <string name="accessibility_script_injection_security_warning_title">Install web scripts?</string>
    <string name="accessibility_script_injection_security_warning_summary">Do you want apps to install scripts from Google that make their web content more accessible?</string>
    <string name="accessibility_touch_exploration_warning">This feature changes the way your device responds to touch. Turn on?</string>
    <string name="voice_category">Speech</string>
    <string name="recognizer_title">Voice recognizer</string>
    <string name="recognizer_settings_title">Voice Search</string>
    <string name="tts_settings_title">Text-to-speech output</string>
    <string name="tts_general_section_title">General</string>
    <string name="local_backup_password_title">Desktop backup password</string>
    <string name="local_backup_password_summary_none">"Desktop full backups aren't currently protected."</string>
    <string name="hdcp_checking_title">HDCP checking</string>
    <string name="hdcp_checking_dialog_title">Set HDCP checking behavior</string>
    <string name="debug_ui_category">User interface</string>
    <string name="strict_mode">Strict mode enabled</string>
    <string name="strict_mode_summary">Flash screen when apps do long operations on main thread</string>
    <string name="pointer_location">Pointer location</string>
    <string name="pointer_location_summary">Screen overlay showing current touch data</string>
    <string name="show_touches">Show touches</string>
    <string name="show_touches_summary">Show visual feedback for touches</string>
    <string name="show_screen_updates">Show screen updates</string>
    <string name="show_screen_updates_summary">Flash areas of screen when they update</string>
    <string name="show_cpu_usage">Show CPU usage</string>
    <string name="show_cpu_usage_summary">Screen overlay showing current CPU usage</string>
    <string name="force_hw_ui">Force GPU rendering</string>
    <string name="force_hw_ui_summary">Use 2D hardware acceleration in applications</string>
    <string name="window_animation_scale_title">Window animation scale</string>
    <string name="transition_animation_scale_title">Transition animation scale</string>
    <string name="debug_applications_category">Apps</string>
    <string name="immediately_destroy_activities">"Don't keep activities"</string>
    <string name="immediately_destroy_activities_summary">Destroy every activity as soon as the user leaves it</string>
    <string name="app_process_limit_title">Background process limit</string>
    <string name="show_all_anrs">Show all ANRs</string>
    <string name="show_all_anrs_summary">Show App Not Responding dialog for background apps</string>
    <string name="monotype_preference_title">Font style</string>
    <string name="monotype_preference_summary">Set font</string>
    <string name="display_saving">Auto adjust screen power</string>
    <string name="display_saving_mode_summary">Save power by analyzing image and adjusting LCD brightness</string>
    <string name="g_sensor_title">Gyroscope calibration</string>
    <string name="g_sensor_summary">Calibrate motion correctly using gyroscope</string>
    <string name="a_sensor_title">Horizontal calibration</string>
    <string name="a_sensor_summary">Calibrate horizontally using accelerometer</string>
    <string name="lockscreen_wallpaper">Lock screen wallpaper</string>
    <string name="screen_display">Screen display</string>
    <string name="touch_key_light">Touch key light duration</string>
    <string name="touch_key_light_summary">Adjust the delay before the Touch key light automatically turns off</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="screen_mode_setting">Screen mode</string>
    <string name="screen_mode_summary">Select the screen mode</string>
    <string name="clock">Clock</string>
    <string name="clock_summary">Show clock on lock screen</string>
    <string name="weather_settings">Weather settings</string>
    <string name="weather_settings_summary">Set refresh interval and thermometer units</string>
    <string name="clock_weather_position">Clock and weather position</string>
    <string name="weather">Weather</string>
    <string name="weather_summary">Show weather on lock screen</string>
    <string name="customer_power_saving_title">Custom power saving mode settings</string>
    <string name="power_saving_mode_on_title">Power saving on at</string>
    <string name="power_saving_mode_setting">Power saving mode settings</string>
    <string name="nonuse_wifi_title">Turn off Wi-Fi</string>
    <string name="nonuse_wifi_summary">Turn off Wi-Fi when not connected</string>
    <string name="nonuse_bluetooth_title">Turn off Bluetooth</string>
    <string name="nonuse_bluetooth_summary">Turn off Bluetooth when not in use</string>
    <string name="nonuse_gps_title">Turn off GPS</string>
    <string name="nonuse_gps_summary">Turn off GPS when not in use</string>
    <string name="nonuse_sync_title">Turn off Sync</string>
    <string name="nonuse_sync_summary">Turn off Sync when phone is not synchronising with server</string>
    <string name="nonuse_brightness_summary">Adjust brightness of screen</string>
    <string name="screentimeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="accessibility_vision_category">Vision</string>
    <string name="high_contrast_title">High contrast</string>
    <string name="screen_zoom_title">Screen zoom</string>
    <string name="torch_light">Assistive light</string>
    <string name="torch_light_summary">Turn on torch to see better</string>
    <string name="easy_access_category">Easy Access</string>
    <string name="answering_end_call_title">Call answering/ending</string>
    <string name="answering_end_call_summary">Manage call answering/ending settings</string>
    <string name="power_key_hold_title">Accessibility shortcut</string>
    <string name="power_key_hold_summary">Press and hold the power key to use the accessibility shortcut under phone options</string>
    <string name="audio_preference_title">Hearing</string>
    <string name="mono_audio_title">Mono audio</string>
    <string name="mono_audio_summary">Provides mono audio for listening with one earphone</string>
    <string name="motion_settings_title">Motion settings</string>
    <string name="motion_activation">Motion activation</string>
    <string name="tilt_title">Tilt to zoom</string>
    <string name="pan_title">Pan to edit</string>
    <string name="shake_title">Shake to update</string>
    <string name="double_tap_title">Double tap</string>
    <string name="pick_up_title">Pick up to notice</string>
    <string name="turn_over_title">Turn over to mute</string>
    <string name="tilt_summary">Reduce or enlarge screen in Gallery and Browser</string>
    <string name="pan_summary">Move icons one at a time to another page in Home and Applications edit mode</string>
    <string name="shake_summary">Scan for devices</string>
    <string name="double_tap_summary">Automatically prepare your device for voice commands in %s</string>
    <string name="pick_up_summary">Catch missed events</string>
    <string name="turn_over_summary">Mute incoming calls and playing sounds</string>
    <string name="license_settings">Licence settings</string>
    <string name="home_screen_wallpaper">Home screen wallpaper</string>
    <string name="diagnostics_and_usage_title">Diagnostics and usage</string>
</resources>